<resources>
    <!--常用字符串-->
    <string name="app_name">乐转</string>
    <string name="cancel">取 消</string>
    <string name="ensure">确 认</string>
    <string name="create">新建</string>
    <!--login-->
    <string name="login">登 录</string>
    <string name="phone">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="forget">忘记密码</string>
    <!--register-->
    <string name="register">注 册</string>
    <string name="code">请输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="username">请输入昵称</string>
    <string name="check">请重复密码</string>
    <!--forget-->
    <string name="commit">提交</string>
    <!--main-->
    <string name="home">首页</string>
    <string name="friend">好友</string>
    <string name="person">我的</string>
    <!--home-->
    <string name="search">搜索</string>
    <string name="food">美食</string>
    <string name="clothing">服装首饰</string>
    <string name="service">生活服务</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="nearby">附近</string>
    <string name="friend_transmit">好友转发</string>
    <string name="key_word">输入关键字</string>
    <!--friend-->
    <string name="search_hint">手机号/昵称</string>
    <string name="friend_new">新朋友</string>
    <string name="add">添  加</string>
    <string name="added">已添加</string>
    <string name="agree">同  意</string>
    <!--info-->
    <string name="info">广告详情</string>
    <string name="now_transmit">立即转发</string>
    <string name="store_info">店铺信息</string>
    <string name="publish_info">图文详情</string>
    <!--person-->
    <string name="setting">设置</string>
    <string name="publish">我的发布</string>
    <string name="transmit">我的转发</string>
    <string name="collect">我的收藏</string>
    <string name="wallet">我的钱包</string>
    <string name="store">我的店铺</string>
    <string name="card">我的卡片</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="join">加入我们</string>
    <string name="clear">清除缓存</string>
    <string name="exit">退出登录</string>
    <!--setting-->
    <string name="change_portrait">更换头像</string>
    <!--publish-->
    <string name="AD_publish">广告发布</string>
    <string name="money">金额</string>
    <string name="money_sign">￥</string>
    <string name="pay">去支付</string>
    <string name="AD_title">标题：</string>
    <string name="AD_content">请输入一段描述性文字</string>
    <string name="AD_store">选择店铺</string>
    <string name="AD_prize">奖品数量：</string>
    <!--store-->
    <string name="store_create">店铺入住</string>
    <string name="store_name">店铺名</string>
    <string name="store_phone">手机号</string>
    <string name="store_address">请输入店铺详细地址</string>
    <string name="store_hint">系统定位用于显示距离\n请确保当前所在位置为店铺位置</string>
    <string name="save">保 存</string>
    <!--wallet-->
    <string name="balance">账户余额（元）</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <!--code-->
    <string name="code_title">收款二维码</string>
    <string name="code_marked">扫一扫上面的二维码，向我付款</string>
    <!--pay-->
    <string name="payment">付款</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_ensure">确认支付</string>
    <string name="success">支付成功</string>
</resources>
