<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.thinkser.lezhuan.data.AppData" />

        <variable
            name="presenter"
            type="com.thinkser.lezhuan.activity.ForgetActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <!--标题栏-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <include
                layout="@layout/title"
                app:back="@{()->presenter.back()}"
                app:backColor="@{@color/colorTheme}"
                app:layoutColor="@{@color/colorTab}"
                app:lineColor="@{@color/colorLine}"
                app:title="@{@string/forget}"
                app:titleColor="@{@color/colorTextDark}" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <!--手机号-->
            <EditText
                style="@style/login_edit"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="11"
                android:text="@={data.phone}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine" />

            <!--验证码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorWhite">

                <EditText
                    style="@style/login_edit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:text="@={data.code}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="@{data.getCode.equals(@string/getCode)}"
                    android:gravity="center"
                    android:onClick="@{()->presenter.getCode()}"
                    android:padding="13dp"
                    android:text="@{data.getCode}"
                    android:textColor="@{data.getCode.equals(@string/getCode)?@color/colorTheme:@color/colorTextLight}"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine" />

            <!--密码-->
            <EditText
                style="@style/login_edit"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:text="@={data.password}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine" />

            <!--确认密码-->
            <EditText
                style="@style/login_edit"
                android:hint="@string/check"
                android:inputType="textPassword"
                android:maxLength="16"
                android:text="@={data.check}" />

            <!--重置-->
            <TextView
                style="@style/login_button"
                android:onClick="@{()->presenter.reset()}"
                android:text="@string/commit" />
        </LinearLayout>

    </LinearLayout>
</layout>
